--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">Austin, TXTyler, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/childserve/job/ottwafwm'>ChildServe Careers - Speech Language Pathologist - Ames</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/childserve/job/ottwafwm'>ChildServe Careers - Speech Language Pathologist - Ames</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... In the role of Speech Language Pathologist you will provide comprehensive, 
 family-centered speech-language pathology services to children ages birth 
@@ -143,7 +143,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4364310002'>Job Application for Speech Therapist - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4364310002'>Job Application for Speech Therapist - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -163,7 +163,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692050585-pediatric-speech-pathologist-tots-clinic'>Theracare INC Pediatric Speech Pathologist - TOTS Clinic | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999692050585-pediatric-speech-pathologist-tots-clinic'>Theracare INC Pediatric Speech Pathologist - TOTS Clinic | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -212,7 +212,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Austin Austin</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
+<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/22513/speech-language-pathologist---prn/job'>Speech Language Pathologist - PRN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 2, 2019 ... Manistee County Medical Care Facility is now hiring a Speech Language 
 Pathologist - PRN in Manistee, Michigan. Review all of the job details and apply 
@@ -233,7 +233,7 @@ details and?...</p>
 <p>4 days ago ... A NEW EXPERIENCE,. ALL THE WAY AROUND. At 360 Behavioral Health, we'
 re new. Yet extremely experienced. Isn't that what driven, curious, passionate?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
+<h5><a href='https://jhs.referrals.selectminds.com/jobs/speech-and-hearing-clinician-speech-therapy-per-diem-days-8510'>Speech and Hearing Clinician (Speech Therapy) / Per Diem (Days) - Jackson Health System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -435,7 +435,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -459,7 +459,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
+<h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
