Tonic App DATA SCIENTIST | SmartRecruiters. Bey (Permanent Job) Data Scientist with PHD, Quantitative Trading Algorithms - Accept Visa Candidates | SmartRecruiters. DATA SCIENTIST - GROUPE SEB Careers. Job Application for Data Scientist at LiveRamp. Job Application for Senior Data Scientist at DRW . 4Catalyzer Data Scientist | SmartRecruiters. Data Scientist - Momentum Solar - Career Page. Spry Squared, Inc. Data Scientist Manager | SmartRecruiters. Fanatics - Senior Data Scientist. Fanatics - Senior Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Lead Data Scientist - Demand Forecasting / Supply Chain Science. Fanatics - Senior Data Scientist. Adam Kay Group Data Scientist | SmartRecruiters. Enterprise Account Exec- Data Science / ML -Paris - h2o.ai - Career Page. Enterprise Account Exec- Data Science / ML -London - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Toronto - h2o.ai - Career Page. Customer Data Scientist / Solution Architect (US/Paris/Munich) - h2o.ai - Career Page. Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page. Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds. Data Scientist - Apply online - Datatonic - Jobs. Jenzabar - Jobs: Data Scientist - Apply online. BL Consulting Co-op (Data Science & ML) - Nokia Careers. Job @ talpasolutions (Essen): Data Scientist | JOIN. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientist - [Remote] - [United States] at Crisp Inc.. Data Scientist/ Python and R Programmer Consultant - Inter .... Bird Careers - Director, Data Science. Bird Careers - Manager, Data Scientist. Mention - Jobs: Senior Data Scientist - Apply online. Lead Data Scientist - Apply ... - Hummingbird Technologies Ltd - Jobs. IBI Group Data Analyst/ Data Scientis

--- a/data-science.html
+++ b/data-science.html
@@ -45,15 +45,23 @@
   
       
 <!--Begin body here --> 
-<h5><a href='https://groupeseb.referrals.selectminds.com/jobs/data-scientist-1755'>DATA SCIENTIST - GROUPE SEB Careers</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TonicApp/743999692424088-data-scientist'>Tonic App DATA SCIENTIST | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421964--permanent-job-data-scientist-with-phd-quantitative-trading-algorithms-accept-visa-candidates'>Bey (Permanent Job) Data Scientist with PHD, Quantitative Trading Algorithms - Accept Visa Candidates | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://groupeseb.referrals.selectminds.com/jobs/data-scientist-1755'>DATA SCIENTIST - GROUPE SEB Careers</a></h5> 
+<p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/liveramp/jobs/1794532'>Job Application for Data Scientist at LiveRamp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drweng/jobs/1796522'>Job Application for Senior Data Scientist at DRW </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drweng/jobs/1796522'>Job Application for Senior Data Scientist at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -133,7 +141,7 @@ Points:.</p>
 systems, and text analytics, and a good understanding of deep learning. 5 years
 ?...</p>
 <hr/>
-<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bl-consulting-co-op-data-science-ml-33097'>BL Consulting Co-op (Data Science & ML) - Nokia Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/bl-consulting-co-op-data-science-ml-33097'>BL Consulting Co-op (Data Science & ML) - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Experience with data mining, imputations techniques, algorithms for data science
 , statistical inference and modeling, machine learning. Experience in Natural?...</p>
@@ -152,13 +160,13 @@ is a remote-only company and we give our employees the opportunity to solve?...<
 <p>1 day ago ... Data Scientist - [Remote] - [United States]. Remote Full-time Allows remote. Crisp 
 is a remote-only company and we give our employees the opportunity to solve?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
+<h5><a href='https://iadbcareers.referrals.selectminds.com/jobs/data-scientist-python-and-r-programmer-consultant-1492'>Data Scientist/ Python and R Programmer Consultant - Inter ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Data Scientist/ Python and R Programmer Consultant Background: The Inter-
 American Development Bank's Knowledge, Innovation and Communication 
 Sector.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bird/24da3bfe-6231-4d0f-a68c-6b7b833d6cd5'>Bird Careers - Director, Data Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -230,7 +238,7 @@ have?...</p>
 <p><span class="badge badge-light">Tokyo, Japan Tokyo</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1680164'>Job Application for Senior Data Scientist at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1680164'>Job Application for Senior Data Scientist at Mozilla</a></h5> 
 <p><span class="badge badge-light">Mountain View San Francisco Vancouver Toronto Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -285,7 +293,7 @@ Streaming ? Platform Engineering. Full-time?...</p>
 <p>Jul 18, 2019 ... Self-identification of veteran status (Completion is voluntary and will not subject 
 you to adverse treatment). Tubular Labs is a Government contractor subject to?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oEmCafww'>The Climate Corporation Careers - Data Scientist - Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -305,7 +313,7 @@ you to adverse treatment). Tubular Labs is a Government contractor subject to?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
+<h5><a href='https://ordnancesurvey.csod.com/ats/careersite/jobdetails.aspx?site=1&c=ordnancesurvey&id=914&source=SocialMedia&utm_source=twitter&utm_medium=social&utm_term=&utm_content=&utm_campaign=0a680935-4fdc-4c29-a4ed-85ca736c456c'>Data Science Lead</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -324,7 +332,7 @@ Scientist ? Assistant Director drives forward the Business Value Creation...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/06CA849781'>CACI Ltd - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Data Scientist at CACI Ltd.</p>
 <hr/>
@@ -341,11 +349,11 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
+<h5><a href='https://talkspace.workable.com/j/A46A942643'>Talkspace - Jobs: Data Scientist, User Behavior - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/askmediagroup/jobs/4365031002'>Job Application for Senior Data Scientist at Ask Media Group</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -438,7 +446,7 @@ Engineering. full-time. Submit your application. Resume/CV. ATTACH RESUME/
 <p>Jul 16, 2019 ... Data Scientist, Product - Toronto. Toronto. Product. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/picsart/3b80598e-e5af-4476-9590-e20d26182475'>PicsArt - Lead Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/picsart/3b80598e-e5af-4476-9590-e20d26182475'>PicsArt - Lead Data Scientist</a></h5> 
 <p><span class="badge badge-light">Moscow</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -454,7 +462,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/fahrenheitgroup/job/m9rxxde3cbgujtcdsjz388ywdo'>Data Scientist (Ph.D) | The Fahrenheit Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -474,15 +482,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://datatonic.workable.com/j/0455496B74'>Datatonic - Jobs: Data Science Lead - Apply online</a></h5> 
-<p><span class="badge badge-light">London, England, United Kingdom London</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://datatonic.workable.com/j/4F23F92AEA'>Datatonic - Jobs: Data Scientist - Apply online</a></h5> 
-<p><span class="badge badge-light">Munich Munich London</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
